Google cloud (#7)
* test for gcloud

* del openshift, add cloud

* add server port

* remove default profile

* add explicit profile

* less mem

* update heap

* Use java opts for env specific things instead

* do not fail on connection fail

* Lower pool size

* different way of building

* Delete mvnw

* add hikari logging